:sparkles: Error CORS - method POST
A api pede para usar o method POST porem não tenho username e pass para isso. Abrir THREAD

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ h1, h2, h3 {
   padding: 20px;
 }
 
-.comidas-cards-list {
+.cards-list {
   align-items: center;
   display: flex;
   flex-direction: row;
