:art: SearchBar done
corrigido os alertas e as funct de api's. 14 done

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,12 @@ h1, h2, h3 {
   justify-content: space-between;
   padding: 20px;
 }
+ .header-icon-search {
+   border: none;
+   background: none;
+   cursor: pointer;
+   outline: none;
+ }
 
 .cards-list {
   align-items: center;
