--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,21 @@ h1, h2, h3, h4 {
 }
 
 .header-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  background-image: linear-gradient(0deg, #ff901dff 50%, #ff6d3aff 100%, #ed5729ff 100%);
+  border: none;
+  border-bottom: 2px solid #ff6e3ab3;
+  color: #eff7ffff;
+  height: 50px;
+  margin: 0;
+  padding: 0;
+  position: fixed;
   text-align: center;
+  text-shadow: 
+  /* horizontal-shadow vertical-shadow blur-radius color; */
+  -2px 0px #ff6d3aff,
+  -2px 2px #ff6d3aff;
+  top: 0px;
+  width: 100%;
 }
 
 .header-icons {
@@ -15,8 +26,9 @@ h1, h2, h3, h4 {
   flex-direction: row;
   font-size: 25px;
   justify-content: space-between;
-  padding: 20px;
+  padding: 10px 20px 0;
 }
+
  .header-icon-search {
    border: none;
    background: none;
@@ -24,11 +36,51 @@ h1, h2, h3, h4 {
    outline: none;
  }
 
-.cards-list {
-  align-items: center;
+ .searchBar-container {
+   border: 5px solid red;
+ }
+
+ .footer-container {
+  background-image: linear-gradient(180deg, #ff901dff 30%, #ff6d3aff 80%, #ed5729ff 150%);
+  border: none;
+  border-top: 2px solid #ff6e3ab3;
+  bottom: 0px;
+  height: 55px;
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  text-align: center;
+  width: 100%;
+ }
+
+ .footer-icons {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: space-around;
-  height: 100vh;
-}
+ }
+
+ .footer-icon {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #eff7ffff;
+  margin: 0;
+  padding: 5px 0;
+  text-decoration: none;
+  box-shadow: none;
+ }
+
+/* 
+CSS HEX
+--black: #000000ff;
+--dark-green: #002e24ff;
+--pine-green: #2b7869ff;
+--steel-teal: #558c8cff;
+--flame: #ed5729ff;
+--orange-crayola: #ff6d3aff;
+--dark-orange: #ff901dff;
+--honey-yellow: #ffb125ff;
+--azure-x-11-web-color: #dae6e7ff;
+--alice-blue: #eff7ffff;
+*/
