:bug: Fix 41 e card recomendados
coloquei uma condição para o map da list e adicionei um parametro para a page de receita detalhada observar, assim a pagina não quebra quando se clica em um recomended.

--- a/src/stylesCSS/PageDetalhada.css
+++ b/src/stylesCSS/PageDetalhada.css
@@ -76,7 +76,7 @@ hr {
 
 .detalhes-buttons {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   padding-bottom: 10px;
   width: 55%;
 }
@@ -88,7 +88,7 @@ hr {
   cursor: pointer;
   display: flex;
   height: 50px;
-  justify-content: start;
+  justify-content: flex-start;
   outline: none;
   padding: 15px 0 10px 0;
   width: 160px;
