--- a/src/stylesCSS/Recomended.css
+++ b/src/stylesCSS/Recomended.css
@@ -58,21 +58,21 @@
   margin: 10px 0 0;
 }
 
-/* ::-webkit-scrollbar {
+.recomended-container::-webkit-scrollbar {
   width: 15px;
 }
 
-::-webkit-scrollbar-track {
-  background: #defaee; 
-  box-shadow: inset 0 0 5px #558c8cff; 
+.recomended-container::-webkit-scrollbar-track {
+  background: none;
+  box-shadow: none; 
   border-radius: 10px;
 }
  
-::-webkit-scrollbar-thumb {
+.recomended-container::-webkit-scrollbar-thumb {
   background: #558c8cff; 
   border-radius: 10px;
 }
 
-::-webkit-scrollbar-thumb:hover {
+.recomended-container::-webkit-scrollbar-thumb:hover {
   background: #558c8cff; 
-} */
+}
