--- a/src/stylesCSS/DetalhesResponsive.css
+++ b/src/stylesCSS/DetalhesResponsive.css
@@ -76,7 +76,7 @@
   
   .detalhes-buttons {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     padding-bottom: 5px;
     width: 95%;
   }
@@ -88,7 +88,7 @@
     cursor: pointer;
     display: flex;
     height: 50px;
-    justify-content: start;
+    justify-content: flex-start;
     outline: none;
     width: 50px;
   }
