:bug: Bug requisito 33
width inviável para os cards recomendados

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 body {
+  background: radial-gradient(circle, #e5faf1 50%, #c5dfd3 100%);
+  background-size: 100% 100%;
+  box-sizing: border-box;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
