--- a/src/stylesCSS/Recomended.css
+++ b/src/stylesCSS/Recomended.css
@@ -23,8 +23,24 @@
   text-align: center;
 }
 
-.recomended-datails:hover {
+.recomended-datails:hover, .recomended-datails-ingredient:hover {
   box-shadow: 0px 2.5px 9px #2b7869ff;
+}
+
+.recomended-datails-ingredient {
+  align-items: center;
+  background-color: #eff7ffff;
+  border: 1px solid #dae6e7ff;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px #558c8cff;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 180px;
+  margin: 10px 5px;
+  text-align: center;
+  width: 150px;
 }
 
 .recomended-details-link {
