--- a/src/stylesCSS/DetalhesResponsive.css
+++ b/src/stylesCSS/DetalhesResponsive.css
@@ -1,7 +1,5 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 812px) {
   .detalhes-main {
-    background: radial-gradient(circle, #defaee 50%, #c5dfd3 100%);
-    background-size: 120vh;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -32,7 +30,7 @@
     -2px 0px #ff6d3aff,
     -2px 2px #ff6d3aff;
     top: 0px;
-    width: 100%;
+    width: 100vw;
   }
   
   .detalhes-img {
@@ -60,18 +58,18 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 50%;
+    width: 50vw;
   }
   
   .detalhes-title {
-    font-size: 30px;
+    font-size: 20px;
     margin-top: 5px;
   }
   
   .detalhes-subtitle {
     color: #eff7ffff;
-    font-size: 20px;
-    margin-top: 15px;
+    font-size: 15px;
+    margin-top: 5px;
   }
   
   .detalhes-buttons {
@@ -94,7 +92,7 @@
   }
 
   .detalhes-share {
-    width: 100px;
+    width: 80%;
   }
   
   .share-copiado {
@@ -180,8 +178,8 @@
     box-shadow: 1px 2px 2px #558c8cb3;
     box-sizing: border-box;
     margin: 20px 10px 0 0;
-    max-width: 360px;
-    max-height: 215px;
+    max-width: 290px;
+    max-height: 200px;
   }
   
   .detalhes-video iframe:hover {
@@ -234,6 +232,34 @@
   }
   
   .detalhes-new-recipe-btn:hover {
+    box-shadow: 1px 2px 4px #2b7869ff;
+  }
+
+  .detalhes-save-recipe-btn {
+    background-image: linear-gradient(180deg, #ffb125ff 30%, #ff901dff 60%, #ff6d3aff 120%);
+    border: none;
+    border-radius: 4px;
+    bottom: 0;
+    box-shadow: 1px 2px 2px #558c8cb3;
+    color: #eff7ffff;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: bold;
+    height: 20px;
+    margin: 10px 0;
+    outline: none;
+    overflow: auto;
+    overflow-y: hidden;
+    padding: 5px;
+    text-align: center;
+    text-shadow: 
+    /* horizontal-shadow vertical-shadow color; */
+    -1px 0px #ff6d3aff,
+    -1px 1px #ff6d3aff;
+    width: 180px;
+  }
+
+  .detalhes-save-recipe-btn:hover {
     box-shadow: 1px 2px 4px #2b7869ff;
   }
 }
