--- a/src/stylesCSS/PageDetalhada.css
+++ b/src/stylesCSS/PageDetalhada.css
@@ -1,6 +1,4 @@
 .detalhes-main {
-  background: radial-gradient(circle, #defaee 50%, #c5dfd3 100%);
-  background-size: 120vh;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -231,16 +229,30 @@ hr {
   box-shadow: 1px 2px 4px #2b7869ff;
 }
 
-/* b
+.detalhes-save-recipe-btn {
+  background-image: linear-gradient(180deg, #ffb125ff 30%, #ff901dff 60%, #ff6d3aff 120%);
+  border: none;
+  border-radius: 4px;
+  bottom: 0;
+  box-shadow: 1px 2px 2px #558c8cb3;
+  color: #eff7ffff;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: bold;
+  height: 20px;
+  margin: 10px 0;
+  outline: none;
+  overflow: auto;
+  overflow-y: hidden;
+  padding: 5px;
+  text-align: center;
+  text-shadow: 
+  /* horizontal-shadow vertical-shadow color; */
+  -1px 0px #ff6d3aff,
+  -1px 1px #ff6d3aff;
+  width: 180px;
+}
 
-b
-
-cdba = Denise
-
-o nome dela 
-
-22 = 55 alcol
-18 = 45 gas
-x = 6
-
-caio */
+.detalhes-save-recipe-btn:hover {
+  box-shadow: 1px 2px 4px #2b7869ff;
+}
