--- a/src/stylesCSS/Profile.css
+++ b/src/stylesCSS/Profile.css
@@ -80,3 +80,10 @@
 .profile-btn:hover, .profile-btn-sair:hover {
   box-shadow: 1px 2px 4px #2b7869ff;
 }
+
+@media only screen and (max-width: 812px) {
+  .profile-email {
+    font-size: 20px;
+    margin-bottom: 50px;
+  }
+}
