--- a/src/stylesCSS/ResponsiveApp.css
+++ b/src/stylesCSS/ResponsiveApp.css
@@ -138,4 +138,8 @@
   cursor: default;
   padding: 5px 0 7px 4px;
   }
+
+  .searchBar-buscar:hover {
+    box-shadow: 1px 2px 4px #2b7869ff;
+  }
 }
