--- a/src/stylesCSS/Card.css
+++ b/src/stylesCSS/Card.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 25px 0 0;
-  width: 280px;
+  margin: 0;
+  width: 270px;
 }
 
 .card-datails {
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 300px;
+  height: 340px;
   margin: 10px;
   text-align: center;
 }
@@ -29,7 +29,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 40px 0 0;
+  /* margin: 40px 0 0; */
   padding: 0;
   text-decoration: none;
 }
@@ -44,6 +44,19 @@
 .card-info {
   font-size: 18px;
   margin: 15px 0 0;
+}
+
+.card-tags {
+  border: none;
+  cursor: default;
+}
+
+.tag {
+  background: #558c8c80;
+  border-radius: 3px;
+  margin: 0;
+  margin-left: 1px;
+  padding: 3px 10px;
 }
 
 .card-ver-receita {
